# dbms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manual_test_storage.py  mkdocs.yml  pyproject.toml  run_tests.ps1  run_tests.sh
.cursor/rules/: project-guidelines.mdc
.github/workflows/: tests.yml
docs/: architecture.md  configuration.md  contributing.md  index.md  introduction.md  logging.md  requirements.md  sql_features.md  storage.md
docs/api/: client.md  executor.md  index.md  logging.md  parser.md  storage.md
docs/explanation/: architecture.md  configuration.md  execution.md  grammar.md  logging.md  parser.md
docs/how-to/: debugging.md  extending-parser.md  installation.md  parse-trees.md  testing.md
docs/tutorials/: complex-queries.md  first-query.md  quickstart.md
src/: __init__.py
src/client/: __init__.py
src/common/: __init__.py  config.py  errors.py  logging_config.py
src/dbms/: __init__.py  storage.py
src/executor/: __init__.py  batch_ops.py  executor.py  sinks.py
src/parser/: __init__.py  ast.py  lexer.py  parser.py
src/storage/: __init__.py  storage.py
tests/: conftest.py  test_storage.py
tests/integration/: test_storage.py
tests/sample_data/: orders.csv  users.csv
tests/unit/: test_executor.py  test_imports.py  test_logging.py  test_parser.py
